--- a/style.css
+++ b/style.css
@@ -15,10 +15,10 @@ body {
   padding: 40px;
   border-radius: 15px;
   box-shadow: 0 0 20px #000;
-  width: 350px;
+  width: 400px;
 }
 
-input {
+input, button {
   width: 80%;
   padding: 10px;
   margin: 10px 0;
@@ -27,10 +27,6 @@ input {
 }
 
 button {
-  padding: 10px 20px;
-  margin: 10px 5px;
-  border-radius: 5px;
-  border: none;
   background-color: #333;
   color: #fff;
   cursor: pointer;
@@ -44,9 +40,11 @@ button:hover {
   display: none;
 }
 
-#newsfeed {
-  max-height: 300px;
+#newsfeed, #music-list {
+  max-height: 200px;
   overflow-y: auto;
   text-align: left;
-  margin-top: 20px;
+  margin-top: 10px;
+  border-top: 1px solid #555;
+  padding-top: 10px;
 }
